# niri-waybar-windowlist

./: CHANGELOG.md  Cargo.toml  README.md  config.json  flake.nix
.github/workflows/: build.yml
src/: audio.rs  button.rs  click_actions.rs  compositor.rs  context_menu.rs  errors.rs  event_stream.rs  global.rs  icon_resolver.rs  icons.rs  indicator.rs  lib.rs  main.rs  niri_border_colors.rs  notifications.rs  output_matching.rs  process_info.rs  screen.rs  session.rs  settings.rs  styles.css  system.rs  taskbar.rs  theme.rs  title.rs  waybar_module.rs  wayland.rs  widget.rs
src/app_icon/: image_resolve.rs  mod.rs  style.rs
src/compositor/: client.rs  event_stream.rs  ipc.rs  mod.rs  tracker.rs  window_info.rs
src/focus_urgent_indicator/: mod.rs  style.rs
src/mpris_indicator/: mod.rs  settings.rs  style.rs
src/niri/: border_colors.rs  client.rs  error.rs  event_stream.rs  mod.rs  output_matching.rs  settings.rs  tracker.rs
src/notification_bubble/: mod.rs  pid_cache.rs  settings.rs  style.rs
src/notifications/: mod.rs  pid_cache.rs
src/right_click_menu/: entry_generation.rs  mod.rs  settings.rs  style.rs
src/settings/: click_actions.rs  mod.rs  process_info.rs  title_format.rs
src/title_format/: mod.rs  rules.rs
src/window_button/: click_handlers.rs  context_click.rs  context_menu.rs  focus_click.rs  hover_mouse.rs  mod.rs  settings.rs
src/window_list/: mod.rs  settings.rs  window_drag_action.rs
src/window_title/: guess_term_proc_info.rs  mod.rs  parse.rs  settings.rs  style.rs
