[package]
name = "niri_window_buttons"
version = "0.3.5"
edition = "2021"
rust-version = "1.87.0"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
dirs = "6"
async-stream = "0.3"
bitflags = "2.9"
freedesktop-icons = "0.4"
futures = "0.3"
itertools = "0.14"
linicon = "2.3"
niri-ipc = "=25.11.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
waybar-cffi = "0.1"
zbus = "5.10"
libpulse-binding = { version = "2", default-features = false }
libpulse-glib-binding = { version = "2", default-features = false }
kdl = { version = "6", features = ["v1-fallback"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
