[package]
name = "niri_waybar_windowlist"
version = "0.3.5"
edition = "2021"
rust-version = "1.87.0"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "audio-test"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
async-channel = "2.5"
dirs = "6"
bitflags = "2.9"
freedesktop-icons = "0.4"
futures = "0.3"
itertools = "0.14"
linicon = "2.3"
niri-ipc = "=25.11.0"
minijinja = { version = "2", features = ["builtins"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
waybar-cffi = "0.1"
procfs = "0.17"
zbus = "5.10"
async-stream = "0.3"
kdl = { version = "6", features = ["v1-fallback"] }
